// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
style = Object {
    "paddingBottom": 16,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 16,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#9EABBC",
    "borderBottomWidth": 0,
    "borderLeftWidth": 0,
    "borderRightWidth": 0,
    "borderTopWidth": 0,
    "alignItems": "flex-start",
    "flexDirection": "row",
    "justifyContent": "flex-start",
    "marginLeft": 16,
    "marginRight": 16,
    "fontSize": 14.791111111111112,
    "lineHeight": 16,
    "color": "#58A4FF",
    "fontFamily": "System",
    "fontWeight": "500",
    "marginBottom": 16,
    "flex": 1,
    "borderBottomLeftRadius": 4,
    "borderBottomRightRadius": 4,
    "borderTopLeftRadius": 4,
    "borderTopRightRadius": 4,
    "shadowColor": "#000",
    "shadowOpacity": 0.15,
    "shadowRadius": 3,
    "shadowOffset": {
        "height": 1,
        "width": 0
    },
    "marginTop": 8,
    "height": 48,
    "width": 48,
    "overflow": "hidden"
}

<RCTScrollView
  hitSlop={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomWidth": 1,
          "borderColor": "rgba(0,0,0,.1)",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 24.8,
          "paddingLeft": 24.8,
          "paddingRight": 24.8,
          "paddingTop": 24.8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#EA3154",
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "nubabi",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        spacing={-0.88}
        style={
          Object {
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "color": "#748294",
            "fontFamily": "System",
            "fontSize": 13.866666666666667,
            "fontWeight": "500",
            "lineHeight": 16,
            "marginLeft": 16,
            "marginRight": 16,
          }
        }
      >
        TestBaby
         is 
        0 weeks old
      </Text>
    </View>
    <View
      contentSpacing={true}
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "flex-start",
            "marginBottom": 16,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "marginBottom": 16,
                  "marginLeft": 16,
                  "marginRight": 16,
                  "marginTop": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "borderColor": "#9EABBC",
                    "borderLeftWidth": 0,
                    "borderRightWidth": 0,
                    "borderTopWidth": 0,
                    "height": 48,
                    "width": 48,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "flex": 1,
                  "marginBottom": 16,
                  "marginRight": 16,
                  "marginTop": 16,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {},
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#748294",
                      "fontSize": 12,
                      "lineHeight": 17,
                      "marginBottom": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    My 
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    Test 
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    Baby 
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    intro
                  </Text>
                </Text>
              </View>
            </View>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "margin": 10,
                  "opacity": 1,
                  "padding": 5,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 20,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 16,
            "opacity": 1,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "borderTopWidth": 0,
              "flex": 1,
              "overflow": "hidden",
            }
          }
        >
          <Image
            resizeMode="cover"
            source={1}
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "height": 300,
                  "width": 728,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(116, 130, 148)",
                    "bottom": 0,
                    "flex": 1,
                    "justifyContent": "center",
                    "left": 0,
                    "opacity": 0.4,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
          </Image>
          <View
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "justifyContent": "center",
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#454D56",
                  "fontFamily": "System",
                  "fontSize": 14.791111111111112,
                  "lineHeight": 16,
                }
              }
            >
              This Week's Growth
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 16,
            "opacity": 1,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "marginTop": 8,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 16,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              spacing={-0.68}
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#EA3154",
                  "fontFamily": "System",
                  "fontSize": 20.424170040420666,
                  "lineHeight": 32,
                  "marginLeft": 16,
                  "marginRight": 16,
                }
              }
              textAlign="center"
            >
              30
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "borderColor": "#9EABBC",
                    "borderLeftWidth": 0,
                    "borderRightWidth": 0,
                    "borderTopWidth": 0,
                    "color": "#EA3154",
                    "fontFamily": "System",
                    "fontSize": 14.791111111111112,
                    "lineHeight": 16,
                    "marginLeft": 16,
                    "marginRight": 16,
                  }
                }
              >
                kg
              </Text>
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              spacing={-0.68}
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#58A4FF",
                  "fontFamily": "System",
                  "fontSize": 20.424170040420666,
                  "lineHeight": 32,
                }
              }
              textAlign="center"
            >
              30
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "borderColor": "#9EABBC",
                    "borderLeftWidth": 0,
                    "borderRightWidth": 0,
                    "borderTopWidth": 0,
                    "color": "#58A4FF",
                    "fontFamily": "System",
                    "fontSize": 14.791111111111112,
                    "lineHeight": 16,
                  }
                }
              >
                cm
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#454D56",
                "fontFamily": "System",
                "fontSize": 14.791111111111112,
                "lineHeight": 16,
              }
            }
          >
            TestBaby's
             Growth Chart
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`it renders correctly 2`] = `
style = Object {
    "paddingBottom": 16,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 16,
    "backgroundColor": "#FFFFFF",
    "borderColor": "#9EABBC",
    "borderBottomWidth": 0,
    "borderLeftWidth": 0,
    "borderRightWidth": 0,
    "borderTopWidth": 0,
    "alignItems": "flex-start",
    "flexDirection": "row",
    "justifyContent": "flex-start",
    "marginLeft": 16,
    "marginRight": 16,
    "fontSize": 14.791111111111112,
    "lineHeight": 16,
    "color": "#58A4FF",
    "fontFamily": "System",
    "fontWeight": "500",
    "marginBottom": 16,
    "flex": 1,
    "borderBottomLeftRadius": 4,
    "borderBottomRightRadius": 4,
    "borderTopLeftRadius": 4,
    "borderTopRightRadius": 4,
    "shadowColor": "#000",
    "shadowOpacity": 0.15,
    "shadowRadius": 3,
    "shadowOffset": {
        "height": 1,
        "width": 0
    },
    "marginTop": 8,
    "height": 48,
    "width": 48,
    "overflow": "hidden"
}

<RCTScrollView
  hitSlop={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomWidth": 1,
          "borderColor": "rgba(0,0,0,.1)",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingBottom": 24.8,
          "paddingLeft": 24.8,
          "paddingRight": 24.8,
          "paddingTop": 24.8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={false}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#EA3154",
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "nubabi",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        spacing={-0.88}
        style={
          Object {
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopWidth": 0,
            "color": "#748294",
            "fontFamily": "System",
            "fontSize": 13.866666666666667,
            "fontWeight": "500",
            "lineHeight": 16,
            "marginLeft": 16,
            "marginRight": 16,
          }
        }
      >
        TestBaby
         is 
        0 weeks old
      </Text>
    </View>
    <View
      contentSpacing={true}
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#9EABBC",
          "borderLeftWidth": 0,
          "borderRightWidth": 0,
          "borderTopWidth": 0,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "flex-start",
            "marginBottom": 16,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
            }
          }
        >
          <View
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <View
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "marginBottom": 16,
                  "marginLeft": 16,
                  "marginRight": 16,
                  "marginTop": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "borderColor": "#9EABBC",
                    "borderLeftWidth": 0,
                    "borderRightWidth": 0,
                    "borderTopWidth": 0,
                    "height": 48,
                    "width": 48,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "flex": 1,
                  "marginBottom": 16,
                  "marginRight": 16,
                  "marginTop": 16,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#748294",
                      "fontSize": 12,
                      "lineHeight": 17,
                      "marginBottom": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    My 
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    Test 
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    Baby 
                  </Text>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    disabled={false}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {},
                        undefined,
                      ]
                    }
                  >
                    intro
                  </Text>
                </Text>
              </View>
            </View>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits={undefined}
              accessible={true}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "margin": 10,
                  "opacity": 1,
                  "padding": 5,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 20,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Ionicons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 16,
            "opacity": 1,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "borderBottomLeftRadius": 4,
              "borderBottomRightRadius": 4,
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 4,
              "borderTopRightRadius": 4,
              "borderTopWidth": 0,
              "flex": 1,
              "overflow": "hidden",
            }
          }
        >
          <Image
            resizeMode="cover"
            source={1}
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "height": 300,
                  "width": 728,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "rgb(116, 130, 148)",
                    "bottom": 0,
                    "flex": 1,
                    "justifyContent": "center",
                    "left": 0,
                    "opacity": 0.4,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              />
            </View>
          </Image>
          <View
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "justifyContent": "center",
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#454D56",
                  "fontFamily": "System",
                  "fontSize": 14.791111111111112,
                  "lineHeight": 16,
                }
              }
            >
              This Week's Growth
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "stretch",
            "backgroundColor": "#FFFFFF",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "borderBottomWidth": 0,
            "borderColor": "#9EABBC",
            "borderLeftWidth": 0,
            "borderRightWidth": 0,
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "borderTopWidth": 0,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 16,
            "opacity": 1,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.15,
            "shadowRadius": 3,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "marginTop": 8,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 16,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              spacing={-0.68}
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#EA3154",
                  "fontFamily": "System",
                  "fontSize": 20.424170040420666,
                  "lineHeight": 32,
                  "marginLeft": 16,
                  "marginRight": 16,
                }
              }
              textAlign="center"
            >
              66.14
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "borderColor": "#9EABBC",
                    "borderLeftWidth": 0,
                    "borderRightWidth": 0,
                    "borderTopWidth": 0,
                    "color": "#EA3154",
                    "fontFamily": "System",
                    "fontSize": 14.791111111111112,
                    "lineHeight": 16,
                    "marginLeft": 16,
                    "marginRight": 16,
                  }
                }
              >
                lbs
              </Text>
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              spacing={-0.68}
              style={
                Object {
                  "borderBottomWidth": 0,
                  "borderColor": "#9EABBC",
                  "borderLeftWidth": 0,
                  "borderRightWidth": 0,
                  "borderTopWidth": 0,
                  "color": "#58A4FF",
                  "fontFamily": "System",
                  "fontSize": 20.424170040420666,
                  "lineHeight": 32,
                }
              }
              textAlign="center"
            >
              30
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                style={
                  Object {
                    "borderBottomWidth": 0,
                    "borderColor": "#9EABBC",
                    "borderLeftWidth": 0,
                    "borderRightWidth": 0,
                    "borderTopWidth": 0,
                    "color": "#58A4FF",
                    "fontFamily": "System",
                    "fontSize": 14.791111111111112,
                    "lineHeight": 16,
                  }
                }
              >
                cm
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "borderBottomWidth": 0,
              "borderColor": "#9EABBC",
              "borderLeftWidth": 0,
              "borderRightWidth": 0,
              "borderTopWidth": 0,
              "justifyContent": "center",
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 16,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "borderBottomWidth": 0,
                "borderColor": "#9EABBC",
                "borderLeftWidth": 0,
                "borderRightWidth": 0,
                "borderTopWidth": 0,
                "color": "#454D56",
                "fontFamily": "System",
                "fontSize": 14.791111111111112,
                "lineHeight": 16,
              }
            }
          >
            TestBaby's
             Growth Chart
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
